Last Page Ready

--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,12 @@
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
   /> 
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=News+Cycle&display=swap"
+    rel="stylesheet"
+  />
     <title>ECOM BUDDY</title>
   </head>
   <body>
